1999-01-08  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* List.m ([List_any -lispOut:]): Use MAKE_INSTANCE_FUNCTION_NAME
	instead of MAKE_OBJC_FUNCTION_NAME.

	* Map.m ([Map_c -lispOut:]): Likewise.

1999-01-06  Alex Lancaster  <alex@santafe.edu>

	* collections.h (PermutationItem): Add phase tags and
	documentation strings.

1999-01-06  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* List_GEN.m ([TINDEX -setOffset:]): Cast count to int.

	* collections.h (PermutationItem): New protocol.
	(PermutedIndex): Remove no-update qualification.

	* collections.m (_collections_implement): Setup PermutationItem.

	* Collection.m: Include Permutation.h and collections.h.
	([PermutedIndex_c -next], [PermutedIndex_c -prev]): Use
	PermutationItem to get item.  Skip over removed items.
	([PermutedIndex_c -findNext:], [PermutedIndex_c -findPrev:],
	[PermutedIndex_c -get]): Get item via PermutedItem.
	([PermutedIndex_c -put:]): Use atOffset:put: with
	PermutedItem's offset. 
	([PermutedIndex_c -remove]): Use indexAtOffset with PermutedItem's
	offset to remove item.
	([PermutedIndex_c -getLoc]): Use PermutedItem to get position and
	return Removed if position is < 0, otherwise use result of 
	getLoc on internal index.

	* Permutation.m: Include collections.h.
	([Permutation_c -mapAllocations:mapalloc]): Map over internal
	PermuteItems.

	* Permutation.h ([Permutation_c -mapAllocations:mapalloc]): Declare.

	* Permutation.[hm] ([Permutation_c -getCollection]): Add.
	([Permutation_c -generatePermutation]): Remove.

	* Permutation.[hm] (PermutationItem_c): New class.

1998-12-29  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Array.m (initArray): Make copyCount unsigned.
	([Array_c -atOffset:]): Cast count to int for comparison with
	offset.
	([Array_c -atOffset:put:]): Likewise.
	([ArrayIndex_c -setOffset:]): Likewise.

	* Collection.m (indexAtOffset): Cast count to int for comparison with
	offset.

1998-12-28  Marcus G. Daniels  <mgd@chama.santafe.edu>
